# service-example

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: settings.py
app/modules/users/: module.py
app/modules/users/domain/: commands.py  events.py  models.py  queries.py
app/modules/users/infrastructure/: errors.py  repository.py
app/modules/users/service_layer/: command_handlers.py  errors.py  event_handlers.py  query_handlers.py
app/presentation/: bootstrap.py  container.py
app/presentation/api/: api_setup.py  factory.py  router.py
app/presentation/api/common/: errors.py  pagination.py
app/presentation/api/common/schemas/: base.py
app/presentation/api/dependencies/: services.py
app/presentation/api/users/: router.py  schemas.py
app/presentation/cli/: shell.py  utils.py
app/seedwork/: README.md
app/seedwork/application/: messages.py  modules.py
app/seedwork/application/mediator/: container.py  dispatcher.py  mediator.py  message_brokers.py  middlewares.py  request.py
app/seedwork/application/mediator/events/: event_emitter.py  event_handler.py  map.py
app/seedwork/infrastructure/: email_sender.py  encoders.py  log_formatters.py  mailjet.py  template_loader.py
app/templates/emails/: email-confirmation.html
