[tool.poetry]
name = "service-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
ipython = "^8.17.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-json-logger = "^2.0.7"
redis = "^5.0.1"
rodi = "^2.0.4"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
jinja2 = "^3.1.2"
sentry-sdk = "^1.35.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
termcolor = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
